<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    <RelativeLayout 
        android:id="@+id/pw"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/bg_setting_item"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/setting_pw_title"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/update"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/bg_setting_item"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/setting_update_title"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"/>
    </RelativeLayout>
    
	<RelativeLayout 
        android:id="@+id/reset"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/bg_setting_item"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/setting_reset_title"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"/>
    </RelativeLayout>
</LinearLayout>
