<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:id="@+id/main">
    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" 
        />

    <com.jiangzhouq.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15.0dip"
        android:layout_above="@+id/qr_tools"
        android:background="#00000030"
        android:gravity="center"
        android:text="@string/scan_qrcode_text"
        android:textColor="#ffffffff"
        android:textSize="15.0sp" />
    
	<LinearLayout
	    android:id="@+id/qr_tools"
       android:layout_width="fill_parent"
       android:layout_height="110.0dip"
       android:layout_alignParentBottom="true"
       android:layout_gravity="bottom"
       android:background="@drawable/qb_scan_bar"
       android:orientation="horizontal"
       android:paddingBottom="0.0dip"
       android:paddingLeft="20.0dip"
       android:paddingRight="20.0dip"
       android:paddingTop="0.0dip" >
		<TextView
            android:id="@+id/gallery"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/qb_scan_album_button"
            android:gravity="center_horizontal"
            android:text="@string/gallery"
            android:textColor="#ff999999"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/flash"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/qb_scan_flash_button"
            android:gravity="center_horizontal"
            android:text="@string/flash"
            android:textColor="#ff999999"
            android:textSize="12.0sp" />
    </LinearLayout>

</RelativeLayout>