<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_wallpaper"
    >

    <ImageView
        android:id="@+id/qrcode_enter"
        android:layout_width="@dimen/qrcode_size"
        android:layout_height="@dimen/qrcode_size"
        android:text="@string/scan_qrcode"
        android:layout_above="@+id/layout_sn_editor"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_qr_scan"
        android:src="@drawable/src_qr_scan"
        android:scaleType="fitXY"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
     />
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/login_input_background"
        android:layout_centerInParent="true"
        android:id="@+id/layout_sn_editor"
        android:padding="10dp">
        <ImageView 
            android:id="@+id/user_state"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/login_user"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />
        <EditText 
            android:id="@+id/sn_editor"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="20sp"
		    android:hint="@string/sn_editor_display"
		    android:layout_centerInParent="true"
		    android:singleLine="true"
		    android:inputType="textUri"
		    android:background="@android:color/white"
		    android:layout_marginLeft="30dp"
		    android:layout_marginRight="30dp"
	    />
        <ImageView 
            android:id="@+id/content_del"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/login_delete"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            />
    </RelativeLayout>
	
	<Button 
	    android:id="@+id/login"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:text="@string/ok"
	    android:textColor="@android:color/white"
	    android:layout_marginTop="10dp"
	    android:textSize="20sp"
	    android:layout_below="@+id/layout_sn_editor"
	    android:background="@drawable/btn_login"/>
</RelativeLayout>
