<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_connect">

    <ImageView 
        android:id="@+id/tv_state"
        android:layout_width="80.0dip"
        android:layout_height="80.0dip"
        android:scaleType="center"
        android:background="@drawable/logo_server"
        android:src="@drawable/server_loading"
        android:layout_above="@+id/tv_content"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting" 
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <LinearLayout 
        android:layout_height="60.0dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <LinearLayout 
            android:id="@+id/video"
            android:layout_height="match_parent"
            android:layout_width="0.0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@drawable/bg_btn_video_disable"
            android:gravity="center"
            android:descendantFocusability="blocksDescendants"
            >
            <ImageView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/call_btn_video"/>
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
	            android:textColor="@android:color/white"
	            android:text="@string/video"
                />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/audio"
            android:layout_height="match_parent"
            android:layout_width="0.0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="5.0dip"
            android:background="@drawable/bg_btn_video_disable"
            android:gravity="center"
            android:descendantFocusability="blocksDescendants"
            >
            <ImageView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/call_mute"/>
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
	            android:textColor="@android:color/white"
	            android:text="@string/audio"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
